# PICK-pytorch

./: pyproject.toml  test.py
allennlp_port/: metric.py  span_utils.py  util.py  viterbi_decode.py
data_utils/: documents.py  pick_dataset.py
model/: crf.py  decoder.py  pick.py
trainer/: trainer.py
utils/: class_utils.py  span_based_f1.py  util.py
